@@ -42,6 +42,7 @@ HideUsersPanel=[true/false] If enabled BeeBEEP hide users panel at startup (defa
 HideOtherPanels=[true/false] If enabled BeeBEEP hide all other panels at startup (default=false) [3.0.6] [obsolete in 4.0.0]
 DisableFileTransfer=[true/false] disable file transfer and the file sharing (default=false) [3.0.6]
 DisableFileSharing=[true/false] disable the file sharing (default=false) [4.0.0]
+DisableDesktopSharing=[true/false] disable the desktop sharing (default=false) [5.6.9]
 DisableSendMessage=[true/false] disable send message. BeeBEEP becomes a read only messenger (default=false) [3.0.6]
 UseEasyConnection=[true/false] BeeBEEP uses account name (if the nickname is not already set) and connects to the network with a standard session
                               (the same of AskNicknameAtStartup=false and UseDefaultPassword=true AskPasswordAtStartup=false in beebeep.ini file) (default=false) [3.0.6]
